@@ -3,8 +3,10 @@ Type: Package
 Title: Atlantis Helper Tool for R
 Version: 0.001
 Date: 2014-04-05
-Author: Christopher David Desjardins
+Author: Christopher David Desjardins <cddesjardins@gmail.com>
 Maintainer: Christopher David Desjardins <cddesjardins@gmail.com>
 Description: Set of helper functions for creating, manipulating, and viewing
     Atlantis files from R.
+Depends:
+    rfishbase
 License: GPL (>= 3)
